--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react_ujs": "^2.6.1",
+    "react-ago-component": "^0.8.1",
+    "react-dom": "^17.0.2",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
